--- a/Resources/index.css
+++ b/Resources/index.css
@@ -1,3 +1,5 @@
+/*
+
 * {
     font-family: Helvetica, sans-serif;
     font-size: 22px;
@@ -30,20 +32,91 @@
     flex-direction: column;
 }
 
+
 .location {
     background-image: url(./img-locations-background.webp);
     height: 500px;
+    display: flex;
+    flex-basis: 300px;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+}
+
+.fuckme {
+    background: none !important;
+}
+
+.location-l1 {
+    display: flex !important;
+    justify-content: space-around !important;
+    align-items: center !important;
 }
 
 .l1 {
-    display: inline-flex;
+    flex-basis: 300px;
+}
+
+.footer {
+    padding: 10px;
 }
 
 .contact {
+    margin-top: 20px;
     height: 200px;
+    width: auto;
+    text-align: center;
 }
 
 .copy {
-    margin-top: 20px;
-    text-align: left;
+    margin: 20px;
+    float: left;
+
+}*/
+
+main {
+    font-family: Helvetica, sans-serif;
+    font-size: 22px;
+    color: seashell;
+    background-color: black;
+    opacity: .9;
+    text-align: center;
+    margin: 0;
+}
+
+.header {
+    width: 100%;
+    height: 69px;
+    display: block;
+    background-color: black;
+    position: fixed;
+    top: 0px;
+    border: 1px solid seashell;
+}
+
+.logo {
+    height: 50px;
+    float: left;
+    padding-left: 10px;
+}
+
+.nav {
+    float: right;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.nav a {
+    height: 100%;
+    display: table;
+    float: left;
+    padding: 0px 20px;
+}
+
+.nav a li {
+    display: table-cell;
+    vertical-align: center;
+    height: 100%;
+    text-decoration: 100%;
+    color: white;
 }
