--- a/Resources/index.css
+++ b/Resources/index.css
@@ -115,8 +115,8 @@ main {
 
 .nav a li {
     display: table-cell;
-    vertical-align: center;
+    vertical-align: middle;
     height: 100%;
-    text-decoration: 100%;
+    text-decoration: underline;
     color: white;
 }
