--- a/Resources/index.css
+++ b/Resources/index.css
@@ -79,7 +79,6 @@ main {
     font-size: 22px;
     color: seashell;
     background-color: black;
-    opacity: .9;
     text-align: center;
     margin: 0;
 }
@@ -92,6 +91,7 @@ main {
     position: fixed;
     top: 0px;
     border: 1px solid seashell;
+    z-index: 1;
 }
 
 .logo {
@@ -155,4 +155,41 @@ main {
 
 .feature h4 {
     margin: 0;
+}
+
+.banner {
+    height: 500px;
+    max-width: 1200px;
+    margin: 40px auto auto auto;
+    padding-top: 85px;
+    background-image: url(/Resources/img-locations-background.webp);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.box-container {
+    max-width: 1200px ;
+    margin: 15px auto auto auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.box {
+    height: 300px;
+    padding: 20px;
+    margin-bottom: auto;
+    flex-basis: 30%;
+    box-sizing: border-box;
+    background-color: black;
+    opacity: .9;
+}
+
+.footer {
+    bottom: 0px;
+}
+
+.copy {
+    text-align: left !important;
+    padding-left: 20px;
 }
