--- a/Resources/index.css
+++ b/Resources/index.css
@@ -101,19 +101,17 @@ main {
 }
 
 .nav {
-    float: right;
     height: 100%;
     margin: 0 auto;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .nav a {
     height: 100%;
-    display: table;
-    float: left;
-    padding: 0px 20px;
+    padding: 20px 20px;
 }
-
-.nav a li {
+.nav a div {
     display: table-cell;
     vertical-align: middle;
     height: 100%;
